@@ -1,5 +1,6 @@
 2016-07-30  Markus Gans  <guru.mail@muenster.de>
-	* Delete all callbacks from a widget, when it will be destroyed
+	* Delete all callbacks from a widget with delCallbacks()
+	* Remove dialog list item callback from the associated window
 
 2016-07-28  Markus Gans  <guru.mail@muenster.de>
 	* Improvements for the window focus
